--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.1.1",
-    "@angular/common": "~8.1.1",
+    "@angular/common": "^8.1.3",
     "@angular/compiler": "~8.1.1",
-    "@angular/core": "~8.1.1",
+    "@angular/core": "^8.1.3",
+    "@angular/elements": "^8.2.4",
     "@angular/fire": "^5.2.1",
     "@angular/forms": "~8.1.1",
     "@angular/platform-browser": "~8.1.1",
